# prometheus-midi-controller-cpp

./: .gitignore  CMakeLists.txt  README.md
src/: backend.cpp  backend.h  main.cpp
ui/: Fader.qml  Main.qml
